/**
 * BlackjackSolitaireRunner class run the BlackjackSolitaire game
 */
public class BlackjackSolitaireRunner {
    /**
     * This is the main method which makes run the BlackjackSolitaire game
     * @param args Unused
     */
    public static void main(String[] args) {
        BlackjackSolitaire bjs = new BlackjackSolitaire();
        bjs.play();
    }
}